--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Transitive by TEMPLATED</title>
+		<title>Singing River</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Transitive <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">Singing River</a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header>
 
@@ -36,9 +36,10 @@
 		-->
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
-					<h1>Transitive</h1>
-					<p>A full responsive, business-oriented HTML5/CSS3 template<br />
-					built by <a href="https://templated.co/">Templated</a> and released under the <a href="https://templated.co/license">Creative Commons</a>.</p>
+					<h1>Singing River</h1>
+					<p>
+						A staffing agency located in Gulfton, TX
+					 </p>
 					<a href="#one" class="button special scrolly">Get Started</a>
 				</div>
 			</section>
@@ -53,7 +54,7 @@
 							</div>
 							<div class="content">
 								<header class="align-center">
-									<h2>Lorem ipsum dolor</h2>
+									<h2>What We Do</h2>
 									<p>maecenas feugiat ex purus, quis volutpat lacus placerat</p>
 								</header>
 								<hr />
