Added language from client

--- a/forCandidates.html
+++ b/forCandidates.html
@@ -6,15 +6,15 @@
 -->
 <html>
 	<head>
-		<title>Singing River Staffing</title>
+		<title>Singing River Staffing || For Candidates</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body>
+	<body class="subpage">
 
 		<!-- Header -->
-			<header id="header" class="alt">
+			<header id="header">
 				<div class="logo"><a href="index.html">Singing River Staffing</a></div>
 				<a href="#menu" class="toggle"><span>Menu</span></a>
 			</header>
@@ -28,74 +28,37 @@
 				</ul>
 			</nav>
 
-		<!-- Banner -->
-		<!--
-			To use a video as your background, set data-video to the name of your video without
-			its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
-			formats to work correctly.
-		-->
-			<section id="banner" data-video="images/banner">
-				<div class="inner">
-					<h1>Singing River</h1>
-					<p>
-						A staffing agency located in Gulfton, TX
-					 </p>
-					<a href="#one" class="button special scrolly">Get Started</a>
-				</div>
-			</section>
-
 		<!-- One -->
 			<section id="one" class="wrapper style2">
 				<div class="inner">
-					<div>
-						<div class="box">
-							<div class="image fit">
-								<img src="images/pic01.jpg" alt="" />
-							</div>
-							<div class="content">
-								<header class="align-center">
-									<h2>What We Do</h2>
-									<p><strong>Singing River Staffing connects Texas 
-										companies to top-tier candidates</strong></p>
-								</header>
-							</div>
+					<div class="box">
+						<div class="image fit">
+							<img src="images/pic01.jpg" alt="" />
+						</div>
+						<div class="content">
+							<header class="align-center">
+								<h2>For Candidates</h2>
+								<!-- <p>maecenas feugiat ex purus, quis volutpat lacus placerat</p> -->
+							</header>
+							<hr /><strong>
+							<p>You do not pay us an up-front fee. Your employer will pay us a commission based 
+                                on a percentage of your initial annual salary. 
+                                Your employer may choose to recover that fee from your salary.</p>
+                            <p>As long as you provide us with all of the relevant information we request of you, 
+                                we will actively search for an employer until the closing of the time window you have requested. </p>
+                            <p>We will actively coach the employer in understanding your home culture, 
+                                natural strengths, and personality type. 
+                                We will coach you in the core values of your new company. 
+                                We will equip you to adopt them as your own. 
+                                Our goal: clear communication between the two of you. 
+                                No “miss” in communication. We will coach until the relationship operates on 
+                                all cylinders. </p>
+                            <p>To register and qualify for an interview with us, 
+                                please complete this Employer Registration Form. </p></strong>
 						</div>
 					</div>
 				</div>
 			</section>
-
-		<!-- Two -->
-			<section id="two" class="wrapper style3">
-				<div class="inner">
-					<div id="flexgrid">
-						<div>
-							<header>
-								<h3>Our Advantage</h3>
-							</header>
-							<p>Cultural intelligence. We coach the employer and the candidate in understanding one another. 
-								Company core values, cultural background, natural strengths, the gift of personality -- 
-								understanding these is a make-or-break in turning a skill match into a long-term win. </p>
-						</div>
-						<div>
-							<header>
-								<h3>The Windfall for you</h3>
-							</header>
-							<p>You become culturally intelligent as we coach you. 
-								You learn to discern people. You deepen your bench. You pivot better.  </p>
-						</div>
-						<div>
-							<header>
-								<h3>Why Singing River</h3>
-							</header>
-							<p>Singing River Staffing cultivates connections across 
-								the multi-cultural networks of greater Houston. 
-								Our team of agents has experience in Africa, Asia, Europe, and the Middle East. 
-								We “get” these worlds, and they have a wealth of value to add to a Texas employer.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
 		<!-- Footer -->
 			<footer id="footer" class="wrapper">
 				<div class="inner">
@@ -113,7 +76,6 @@
 										<label for="email">Email</label>
 										<input name="email" id="email" type="email" placeholder="Email">
 									</div>
-
 									<div class="field">
 										<label for="message">Message</label>
 										<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
@@ -126,7 +88,7 @@
 						</div>
 					</section>
 					<div class="copyright">
-						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>. Video <a href="http://coverr.co/">Coverr</a>.
+						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a> Video <a href="http://coverr.co/">Coverr</a>.
 					</div>
 				</div>
 			</footer>
