Updated Google Forms

--- a/forCandidates.html
+++ b/forCandidates.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/styles.css" />
 	</head>
 	<body class="subpage">
 
@@ -54,7 +55,11 @@
                                 No “miss” in communication. We will coach until the relationship operates on 
                                 all cylinders. </p>
                             <p>To register and qualify for an interview with us, 
-                                please complete this Employer Registration Form. </p></strong>
+								please complete this Employee Registration Form. </p></strong>
+								<div class="container-1">
+								<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdQwxSGMvAwc4opJbbLhCxDHpAp81SNcntHIIt1t2yc8APS6A/viewform?embedded=true" 
+								width="640" height="2208" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+							</div>
 						</div>
 					</div>
 				</div>
