--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/styles.css" />
 	</head>
 	<body>
 
@@ -38,7 +39,7 @@
 				<div class="inner">
 					<h1>Singing River</h1>
 					<p>
-						A staffing agency located in Gulfton, TX
+						A contingency employment agency in Houston
 					 </p>
 					<a href="#one" class="button special scrolly">Get Started</a>
 				</div>
